# realestate_competition_v2

./: .env  .gitignore  Makefile  README.md
app/cli/: after.py  dbt.py  main.py  main2.py  prepare_data.py  submit.py
app/config/: config.yml
app/dbt/: .gitignore
app/dbt/dbt_profiles_postgresql/: profiles.yml
app/dbt/dbt_projects_postgresql/after/: dbt_project.yml
app/dbt/dbt_projects_postgresql/make_prepare_datamart/: dbt_project.yml
app/dbt/dbt_projects_postgresql/make_submit_datamart/: dbt_project.yml
app/dbt/models/after/: 01_01_test_predict.sql  01_02_test_predict.sql
app/json/: model_params.json  model_params2.json
app/logger/: logger.yml
app/modules/cv_models/: cv_models.py
app/modules/datamart/: cv_ml_datamart.py  ml_datamart.py
app/modules/metrics/: metrics.py  metrics_builder.py  regressor_metrics.py
app/modules/models/: model.py  model_builder.py
app/modules/models/lightgbm/: lightgbm_model.py  (+1 more)
app/modules/pipeline/: dict_task_tool.py  pipeline_manager.py  task_builder.py  task_manager.py
app/modules/predict/: make_predict.py
app/modules/prepare_process/: extract_data_definition.py  make_mesh_data.py  prepare_price_data.py  prepare_station_data.py
app/modules/settings/: config.py  pipeline_setup.py  settings.py
app/modules/test_predict/: make_test_predict.py
app/modules/utils/: args_pipeline.py  db_client.py  filesystem.py  fileutil.py  logger.py  seed.py
docker/app/: Dockerfile  docker-compose.override.yml  docker-compose.yml  pyproject.toml
docker/infra/: Dockerfile_mlflow  docker-compose.yml  pyproject.toml
(+40 files in other folders)
