[tool.poetry]
name = "base_project"
version = "0.1.0"
description = ""
authors = ["hideki"]

[tool.poetry.dependencies]
python = "3.12.9"
mlflow = "3.4.0"
pandas = "2.2.2"
PyYAML = "6.0.3"
numpy = "2.3.3"
shap = "0.48.0"
s3fs = "2025.9.0"
gcsfs = "2025.9.0"
python-dotenv = "1.0.1"
psycopg2-binary = "2.9.10"
jsonschema = "4.25.1"
lightgbm = "4.6.0"
scikit-learn = "1.7.2"
polars = "1.33.1"
scipy = "1.16.2"
tqdm = "4.67.1"
catboost = "1.2.8"
optuna = "4.5.0"
dbt-core = "1.10.13"
dbt-postgres = "1.9.1"
jupyterlab = "4.4.8"
jupyter-contrib-nbextensions = "0.7.0"
taipy = "4.1.0"
SQLAlchemy = "2.0.30"
google-cloud-bigquery = "3.38.0"
dbt-bigquery = "1.10.2"
japanize-matplotlib = "1.1.3"
graphviz = "0.21"
google-cloud-aiplatform = "1.122.0"
geopandas = "1.1.2"

[tool.poetry.dev-dependencies]
pytest = "8.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

